--- a/index.html
+++ b/index.html
@@ -16,11 +16,24 @@
   <div class="content-container">
     <img width="1000" height="1000" src="img/photo-1606387945281-0485fbcba5f4.jpg" alt="nice pic" class="img">
     <p class="content-text">
-      Spicy jalapeno bacon ipsum dolor amet ad ipsum landjaeger velit bacon non kielbasa spare ribs rump ut doner leberkas pancetta ribeye. Cupim aute andouille, landjaeger flank in laboris id ipsum shoulder. Ut tenderloin fugiat jowl picanha. Meatloaf aute irure reprehenderit proident.
-      Enim chicken excepteur ball tip biltong ut andouille culpa tail cupidatat venison. Beef ribs excepteur aliqua kielbasa tongue duis ham hock irure et tenderloin tri-tip veniam cupim officia jowl. Qui veniam dolor doner. Alcatra porchetta in brisket labore nulla. Id ad aliquip voluptate et strip steak pork loin ut.
-      Dolor burgdoggen deserunt cupidatat, quis doner corned beef flank. Pastrami drumstick chuck prosciutto. Deserunt aute frankfurter quis ipsum in velit. In doner t-bone meatball laborum shoulder spare ribs brisket bresaola lorem consectetur tenderloin eiusmod.
-      Ball tip chuck ex occaecat porchetta tenderloin sint pig picanha in. Tri-tip turducken eu do. Dolore ribeye ball tip beef, drumstick cupidatat eu quis meatball excepteur buffalo do exercitation. Pork consectetur burgdoggen, ea drumstick porchetta aliqua ground round salami short ribs id voluptate t-bone.
-      Deserunt salami ham hock, est id tri-tip ullamco pig ea short ribs swine sunt ipsum pork belly ball tip. Pork belly ground round deserunt quis beef, beef ribs kielbasa andouille boudin corned beef nulla excepteur officia duis enim. Pastrami sed laborum, ullamco rump irure frankfurter incididunt consectetur qui. Eu chuck rump laboris kielbasa fugiat alcatra consectetur.
+      Spicy jalapeno bacon ipsum dolor amet ad ipsum landjaeger velit bacon non kielbasa spare ribs rump ut doner leberkas pancetta ribeye. 
+      Cupim aute andouille, landjaeger flank in laboris id ipsum shoulder. 
+      Ut tenderloin fugiat jowl picanha. 
+      Meatloaf aute irure reprehenderit proident.
+      Enim chicken excepteur ball tip biltong ut andouille culpa tail cupidatat venison. 
+      Beef ribs excepteur aliqua kielbasa tongue duis ham hock irure et tenderloin tri-tip veniam cupim officia jowl. 
+      Qui veniam dolor doner. Alcatra porchetta in brisket labore nulla. 
+      Id ad aliquip voluptate et strip steak pork loin ut.
+      Dolor burgdoggen deserunt cupidatat, quis doner corned beef flank. 
+      Pastrami drumstick chuck prosciutto. Deserunt aute frankfurter quis ipsum in velit. 
+      In doner t-bone meatball laborum shoulder spare ribs brisket bresaola lorem consectetur tenderloin eiusmod.
+      Ball tip chuck ex occaecat porchetta tenderloin sint pig picanha in. 
+      Tri-tip turducken eu do. Dolore ribeye ball tip beef, drumstick cupidatat eu quis meatball excepteur buffalo do exercitation. 
+      Pork consectetur burgdoggen, ea drumstick porchetta aliqua ground round salami short ribs id voluptate t-bone.
+      Deserunt salami ham hock, est id tri-tip ullamco pig ea short ribs swine sunt ipsum pork belly ball tip. 
+      Pork belly ground round deserunt quis beef, beef ribs kielbasa andouille boudin corned beef nulla excepteur officia duis enim. 
+      Pastrami sed laborum, ullamco rump irure frankfurter incididunt consectetur qui. 
+      Eu chuck rump laboris kielbasa fugiat alcatra consectetur.
     </p>
   </div>
 
